--- a/module/show_order_detail.html
+++ b/module/show_order_detail.html
@@ -15,7 +15,7 @@
     <span class="txt-style-title-message">接取訂單</span>   
     <div class="flex-d-col txt-area-block load-submit-accept-order">
         <span class="txt-style-large">顯示用戶名稱</span>   
-        <input type="text" class="message-box-input" id="comment-user-name" placeholder="可選擇填寫"/>
+        <input type="text" class="message-box-input" id="accept-user-name" placeholder="可選擇填寫"/>
         <span class="txt-style-large">申請原因</span>   
         <textarea class="message-box-txtarea" id="txtarea-accept-reason"></textarea>
     </div>
@@ -88,8 +88,13 @@
                 <div class="order-detail-txt-block-size"><span class="txt-style-large txt-order-detail">訂單發出用戶接收產品地點: </span></div>
                 <span class="txt-style-large txt-order-detail" id="show-order-product-receive-address"></span>
             </div>
+            <hr class="order-detail-line">
+            <div class="d-flex word-wrap flex-d-col">
+                <div class="order-detail-txt-block-size"><span class="txt-style-large txt-order-detail">產品相關網站超連結 </span></div>
+                <span class="txt-style-large txt-order-detail" id="show-order-product-link"></span>
+            </div>
         </div>
-        <div class="order-detail-block cmt-area" id="">
+        <!-- <div class="order-detail-block cmt-area" id="">
             <hr class="order-detail-line">
             <div class="d-flex word-wrap flex-d-col">
                 <div class="order-detail-txt-block-size"><span class="txt-style-large txt-order-detail question-comment-area-title code">提問/評論區</span></div>
@@ -104,7 +109,7 @@
                     <span>的發言</span>
                 </div>
                 <div class="txt-style-cmt">
-                    <span>I very like this user.</span>
+                    <span>Hello World !.</span>
                 </div>
             </div>
             <div class="d-flex word-wrap flex-d-col question-comment-area user-self-comment">
@@ -114,11 +119,11 @@
                     <span class="cmt-user-name" id="">你的發言</span>
                 </div>
                 <div class="txt-style-cmt">
-                    <span>回復Peter: 謝謝你</span>
+                    <span>回復Peter: 謝謝你的留言</span>
                 </div>
             </div>
             <button id="ctm-add-btn">留言</button>
             <div class="fill-space"></div>
-        </div>
+        </div> -->
     </div>
 </div>
