--- a/testing.html
+++ b/testing.html
@@ -29,209 +29,8 @@
 
 </head>
 <body>
-    <div class="message-box-background none"></div>
-    <div class="fm-message-box code none" id="comment-box">
-        <button class="txt-style-large" id="send-message-btn">發出信息</button>
-        <span class="txt-style-title-message" id="comment-title">評論/提問</span>   
-        <div class="d-flex flex-d-col txt-area-block" id="comment">
-            <span class="txt-style-large">顯示用戶名稱</span>   
-            <input type="text" class="message-box-input" id="comment-user-name" placeholder="預設名稱: 隱藏"/>
-            <span class="txt-style-large" id="txt-area-comment-title">內容</span>   
-            <textarea class="message-box-txtarea" id="txtarea-comment"></textarea>
-        </div>
-    </div>
-    <div class="fm-message-box code none" id="accept-order-box">
-        <button class="txt-style-large load-submit-accept-order" id="submit-accept-order-btn">更新</button>
-        <span class="txt-style-large none submit-accept-order-success" id="close-all-goback-btn">返回</span>   
-        <span class="txt-style-title-message">接取訂單</span>   
-        <div class="flex-d-col txt-area-block load-submit-accept-order">
-            <span class="txt-style-large">顯示用戶名稱</span>   
-            <input type="text" class="message-box-input" id="comment-user-name" placeholder="可選擇填寫"/>
-            <span class="txt-style-large">申請原因</span>   
-            <textarea class="message-box-txtarea" id="txtarea-accept-reason"></textarea>
-        </div>
-        <div class="none flex-d-col load-submit-accept-order submit-accept-order-success" id="submit-success">
-            <img src="img/cancel.png"></img>
-            <span class="txt-style-title-message">已成功刪除訂單申請</span>   
-        </div>
-        <div class="loader animate-submit none" id="animate-accept-order"></div>
-    </div>
-    <div class="order-detail-background none"></div>
-    <div class="fm-order-detail none">
-        <div id="order-detail-close-btn"><span class="fix-location">+</span></div>
-        <div class="loader" id="loader-record"></div>
-        <button class="txt-style-large loading-element none" id="report-btn">檢舉訂單</button>
-        <button class="txt-style-large loading-element none" id="receive-btn">更新申請</button>
-        <input type="hidden" id="fyp-order-id"/>
-        <input type="hidden" id="create-order-user-id"/>
-        <div class="fm-order-detail-content loading-element none">
-            <div class="word-wrap">
-                <img class="order-image-size" id="show-order-product-image" src=""/>
-                <div class="txt-order-detail order-detail-block">
-                    <span class="txt-style-title-message" id="show-order-product-name"></span>
-                    <hr class="order-detail-line">
-                    <div class="d-flex word-wrap">
-                        <div class="order-detail-txt-block-size"><span class="txt-style-large txt-order-detail">產品類別: </span></div>
-                        <span class="txt-style-large txt-order-detail" id="show-order-product-type"></span>
-                    </div>
-                    <div class="d-flex word-wrap">
-                        <div class="order-detail-txt-block-size"><span class="txt-style-large txt-order-detail">產品數量: </span></div>
-                        <span class="txt-style-large txt-order-detail" id="show-order-product-quantity"></span>
-                    </div>
-                    <div class="d-flex word-wrap">
-                        <div class="order-detail-txt-block-size"><span class="txt-style-large txt-order-detail">產品價錢: </span></div>
-                        <span class="txt-style-large txt-order-detail" id="show-order-product-price"></span>
-                    </div>
-                    <div class="d-flex word-wrap">
-                        <div class="order-detail-txt-block-size"><span class="txt-style-large txt-order-detail">報酬金額: </span></div>
-                        <span class="txt-style-large txt-order-detail" id="show-order-product-remuneration"></span>
-                    </div>
-                    <hr class="order-detail-line">
-                    <div class="d-flex word-wrap">
-                        <div class="order-detail-txt-block-size"><span class="txt-style-large txt-order-detail">訂單發出用戶: </span></div>
-                        <span class="txt-style-large txt-order-detail" id="show-order-product-user-name"></span>
-                    </div>
-                    <div class="d-flex word-wrap">
-                        <div class="order-detail-txt-block-size"><span class="txt-style-large txt-order-detail">聯絡訂單發出用戶: </span></div>
-                        <span class="txt-style-large txt-order-detail" id="show-order-product-call-user">私人聊天</span>
-                    </div>
-                </div>
-            </div>
-            <div class="txt-order-detail order-detail-block">
-                <hr class="order-detail-line">
-                <div class="d-flex word-wrap flex-d-col">
-                    <div class="order-detail-txt-block-size"><span class="txt-style-large txt-order-detail">產品詳情/額外資訊: </span></div>
-                    <span class="txt-style-large txt-order-detail" id="show-order-product-detail"></span>
-                </div>
-                <div class="d-flex word-wrap flex-d-col">
-                    <div class="order-detail-txt-block-size"><span class="txt-style-large txt-order-detail">購買產品的地址: </span></div>
-                    <span class="txt-style-large txt-order-detail" id="show-order-product-purchase-address"></span>
-                </div>
-                <div class="d-flex word-wrap flex-d-col">
-                    <div class="order-detail-txt-block-size"><span class="txt-style-large txt-order-detail">訂單發出用戶接收產品地點: </span></div>
-                    <span class="txt-style-large txt-order-detail" id="show-order-product-receive-address"></span>
-                </div>
-            </div>
-            <div class="order-detail-block cmt-area" id="">
-                <hr class="order-detail-line">
-                <div class="d-flex word-wrap flex-d-col">
-                    <div class="order-detail-txt-block-size"><span class="txt-style-large txt-order-detail question-comment-area-title code">提問/評論區</span></div>
-                    <span class="txt-style-large txt-order-detail" id="show-order-product-detail"></span>
-                </div>
-                <div class="d-flex word-wrap flex-d-col question-comment-area">
-                    <span class="cmt-time">22分鐘</span>
-                    <span class="repty-btn">回復</span>
-                    <div>
-                        <span>來自</span>
-                        <span class="cmt-user-name">Peter</span>
-                        <span>的發言</span>
-                    </div>
-                    <div class="txt-style-cmt">
-                        <span>I very like this user.</span>
-                    </div>
-                </div>
-                <div class="d-flex word-wrap flex-d-col question-comment-area user-self-comment">
-                    <span class="cmt-time">剛剛</span>
-                    <span class="repty-btn">回復</span>
-                    <div>
-                        <span class="cmt-user-name" id="">你的發言</span>
-                    </div>
-                    <div class="txt-style-cmt">
-                        <span>回復Peter: 謝謝你</span>
-                    </div>
-                </div>
-                <button id="ctm-add-btn">留言</button>
-                <div class="fill-space"></div>
-            </div>
-        </div>
-    </div>
 
-
-    <!-- Page Preloder -->
-    <div id="preloder">
-        <div class="loader"></div>
-    </div>
-
-    <!-- Offcanvas Menu Begin -->
-    <import src="module/offcanvas.html"></import>
-
-    <!-- Offcanvas Menu End -->
-
-    <!-- Header Section Begin -->
-    <import src="module/header.html"></import>
-    <!-- Header Section End -->
-
-    <!-- Self Order Begin 製作中... -->
-    <div class="d-flex justify-content-center align-items-center flex-d-col">
-        <div class="txt-style-default order-list-update">
-            <span>最後更新時間: </span>
-            <span id="last-update-order-time">NULL</span>
-        </div>
-    </div>
-    <div class="user-self-order">
-        <!--分類*f-->
-        <div class="user-order-header">
-            <h3 class="txt-style-title-message">分類</h3>
-            <div class="order-filter">
-                <div class="order-type">
-                </div>
-                <div class="order-type checkbox-select-hover">
-                    <label class="checkbox-style remove-style">
-                        <input type="checkbox" class="checkbox-select-hover order-checkbox" name="cb-orderType" id="makeOrder" value="make" checked="Checked"/>
-                        <div class="ic-checkbox-style"></div>
-                        <span>已創建的訂單</span>
-                    </label>
-                </div>
-                <div class="order-type checkbox-select-hover">
-                    <label class="checkbox-style remove-style">
-                        <input type="checkbox" class="checkbox-select-hover order-checkbox" name="cb-orderType" id="acceptOrder" value="accept"/>
-                        <div class="ic-checkbox-style"></div>
-                        <span>發出申請的訂單</span>
-                    </label>
-                </div>
-            </div>
-        </div>
-        <!--分類*e-->
-        <!-- 沒有結果界面 -->
-        <div class="h-50 set-center set-flex">
-            <div class="flex-d-col set-center " id="no-order-page" style="display: none;">
-                <img src="../img/user/ic-no-result-found.png" width="200px" height="200px">
-                <div class="txt-style-title">目前沒有任何訂單</div>
-                <button class="txt-style-default to-create-order-btn">建立訂單</button>
-            </div>
-        </div>
-        <!-- 沒有結果界面 -->
-        <!--展示*f-->
-        <div class="" id="self-accept-order-list">
-            <div class="d-flex justify-content-center align-items-center flex-d-col set-to-top" id="">
-                <span class="txt-style-title-message order-result-small-title" id="accept-order-title">發出申請的訂單</span>
-            </div>
-            <div class="user-order-content" id="self-accpet-order">
-                <import src="module/self_order_block.html"></import>
-            </div>
-        </div>
-
-        <div class="d-none" id="self-make-order-list">
-            <div class="d-flex justify-content-center align-items-center flex-d-col set-to-top" id="">
-                <span class="txt-style-title-message order-result-small-title" id="make-order-title">已創建的訂單</span>
-            </div>
-            <!--加載Element-->
-            <div class="user-order-content" id="self-make-order">
-            </div>
-            <!--加載Element-->
-        </div>
-        <!--展示*e-->
-    </div>    
-    <!-- Self Order End -->
-
-    <!-- Footer Section Begin -->
-   <import src="module/footer.html"></import>
-    <!-- Footer Section End -->
-
-    <!-- Search Begin -->
-    <import src="module/search_focus.html"></import>
-    <!-- Search End -->
-
+    <import src=""></import>
     <!-- Js Plugins -->
     <script src="js/jquery-1.11.1.js"></script>
     <script src="js/jquery-3.3.1.min.js"></script>
